<resources>
    <string name="summary_empty" translatable="false"></string>

    <string name="quad_dac_app_name">Quad DAC Panel</string>

    <string name="quad_dac">Hi-Fi Quad DAC</string>
    <string name="quad_dac_on">Quad DAC on</string>
    <string name="quad_dac_off">Quad DAC off</string>
    <string name="quad_dac_unavail">Quad DAC unavailable</string>

    <string name="quad_dac_settings">Quad DAC Settings</string>

    <string name="quad_dac_balance">Balance</string>
    <string name="quad_dac_balance_summary">Change the Left/Right balance</string>

    <string name="sound_preset">Sound preset</string>

    <string name="sound_preset_normal">Normal</string>
    <string name="sound_preset_enhanced">Enhanced</string>
    <string name="sound_preset_detailed">Detailed</string>
    <string name="sound_preset_live">Live</string>
    <string name="sound_preset_bass">Bass</string>

    <string name="digital_filter">Digital filter</string>

    <string name="digital_filter_0">Short</string>
    <string name="digital_filter_1">Sharp</string>
    <string name="digital_filter_2">Slow</string>
    <string name="digital_filter_3">Customizable Filter</string>

    <string name="customizable_filter_settings">Customizable Filter Settings</string>

    <string name="cf_shape">Custom Filter Shape</string>

    <string name="cf_shape_0">Fast roll-off</string>
    <string name="cf_shape_1">Slow roll-off</string>
    <string name="cf_shape_2">Minimum phase fast roll-off</string>
    <string name="cf_shape_3">Minimum phase slow roll-off</string>
    <string name="cf_shape_4">Apodizing fast roll-off</string>
    <string name="cf_shape_5">Hybrid fast roll-off</string>
    <string name="cf_shape_6">Brick wall</string>

    <string name="cf_symmetry">Custom Filter Symmetry</string>

    <string name="cf_symmetry_0">Sine Symmetry</string>
    <string name="cf_symmetry_1">Cosine Symmetry</string>

    <string name="customizable_filter_coeffs">Customizable Filter Coefficients</string>
    <string name="customizable_filter_coeffs_summary">NOTE: If all coefficients are 0, audio will be muted</string>

    <string name="hifi_mode">HiFi mode</string>

    <string name="hifi_mode_normal">Normal</string>
    <string name="hifi_mode_him">High Impedance</string>
    <string name="hifi_mode_aux-him">AUX High Impedance</string>

    <string name="avc_volume">AVC Volume</string>
    <string name="avc_volume_summary">Amplifies volume</string>

</resources>
